# SmallFeatureExamples

./: README.md
CMakeBuildPresetsExample/: CMakeLists.txt  CMakePresets.json  main.cpp
CMakeOptionExample/: CMakeLists.txt  main.cpp
ControlVideoExample/: CMakeLists.txt  MediaPlayItem.qml  main.cpp  main.qml  qml.qrc
CrashpadExample/: CMakeLists.txt  main.cpp
CrashpadExample/crashpad/lib_md/: base.lib  client.lib  common.lib
GitHooksExample/: CMakeLists.txt  README.md
GitHooksExample/hooks/: pre-commit
GitHooksExample/scripts/: build.py
PyQmlExample/: main.py  main.qml
QQmlPropertyMapExample/: CMakeLists.txt  Parameter.h  main.cpp  main.qml
QmlUsePromiseFromC++Qt5.15/: CMakeLists.txt  ControllerControl.cc  ControllerControl.h  Test.h  main.cpp  main.qml
RoboticArmAnimationExample/: StickComponent.qml  main.qml
ScopedQObjectConnection/: CMakeLists.txt  ScopedConnection.h  Test.h  main.cpp
